# gpsinfo

./: AndroidManifest.xml  CMakeLists.txt  LICENSE  PRIVACY_POLICY.md  README  main.cpp  main.qml  satellites_model.cpp  satellites_model.hpp
android/: AndroidManifest.xml
